# MOTION2NX

./: .gitignore  README.md  valgrind-out.txt
circuits/int/: int_add128_depth.bristol  int_add256_depth.bristol  int_add512_depth.bristol  int_eq128.bristol  int_eq256.bristol  int_eq4.bristol  int_eq512.bristol  int_eq64.bristol  int_gt128_depth.bristol  int_gt256_depth.bristol  int_gt2_depth.bristol  int_gt4_depth.bristol  int_gt512_depth.bristol
fbs/: message.fbs
src/examples/: CMakeLists.txt
src/examples/a_to_b_conversion/: CMakeLists.txt  a_to_b_conversion.cpp
src/examples/arith_to_bool_verification/: CMakeLists.txt  arith_to_bool_verification.cpp
src/examples/bit2a_verification/: CMakeLists.txt  bit2a_verification.cpp
src/examples/compaction_verification/: CMakeLists.txt  compaction_verification.cpp
src/examples/gt_verification/: CMakeLists.txt  gt_verification.cpp
src/examples/lenet/: CMakeLists.txt  lenet.cpp
src/examples/mpclan_addition/: CMakeLists.txt  mpclan_addition.cpp
src/examples/mpclan_and/: CMakeLists.txt  mpclan_and.cpp
src/examples/mpclan_multiplication/: CMakeLists.txt  mpclan_multiplication.cpp
src/examples/nn_fully_connected/: CMakeLists.txt  nn_fully_connected.cpp
src/examples/private_heavy_hitters/: CMakeLists.txt  private_heavy_hitters.cpp
src/examples/private_heavy_hitters_simul/: CMakeLists.txt  README.md  private_heavy_hitters_simul.cpp
src/examples/serial_streaming_heavy_hitters/: CMakeLists.txt  serial_streaming_heavy_hitters.cpp
src/examples/shuffle_verification/: CMakeLists.txt
src/examples/sorting_verification/: CMakeLists.txt  sorting_verification.cpp
src/examples/streaming_heavy_hitters/: CMakeLists.txt  streaming_heavy_hitters.cpp
src/examples/swift_basic_verification/: CMakeLists.txt  swift_basic_verification.cpp
src/examples/tensor_gemm/: CMakeLists.txt  tensor_gemm.cpp
src/examples/tensor_relu/: CMakeLists.txt  tensor_relu.cpp
src/motioncore/: CMakeLists.txt
src/motioncore/algorithm/: circuit_loader.cpp  circuit_loader.h  make_circuit.h
src/motioncore/base/: mpclan_backend.cpp  mpclan_backend.h  mpclan_tensor_backend.cpp  mpclan_tensor_backend.h  swift_backend.cpp  swift_backend.h
src/motioncore/crypto/multiplication_triple/: sb_provider.cpp
src/motioncore/executor/: new_gate_executor.cpp
src/motioncore/protocols/beavy/: beavy_provider.cpp  beavy_provider.h  gate.cpp  gate.h  tensor.h  tensor_op.cpp  tensor_op.h  wire.h
src/motioncore/protocols/swift/: conversion.cpp  conversion.h  gate.cpp  gate.h  plain.cpp  plain.h  swift_provider.cpp  swift_provider.h  wire.h
src/motioncore/utility/: constants.h  enable_wait.h  typedefs.h
