add_subdirectory(aes128)
add_subdirectory(benchmark_garbling)
add_subdirectory(benchmark_integers)
add_subdirectory(benchmark_nn_layers)
add_subdirectory(benchmark_operations)
add_subdirectory(benchmark_providers)
add_subdirectory(cryptonets)
add_subdirectory(evaluate_circuit_from_file)
add_subdirectory(example_template)
add_subdirectory(millionaires_problem)
add_subdirectory(sha256)
add_subdirectory(triple_generator)
add_subdirectory(bit2a_verification)
add_subdirectory(private_heavy_hitters_simul)
add_subdirectory(swift_basic_verification)
add_subdirectory(sorting_verification)
add_subdirectory(shuffle_verification)
add_subdirectory(compaction_verification)
add_subdirectory(arith_to_bool_verification)

if (MOTION_BUILD_ONNX_ADAPTER)
  add_subdirectory(onnx2motion)
endif (MOTION_BUILD_ONNX_ADAPTER)

if (MOTION_BUILD_HYCC_ADAPTER)
  add_subdirectory(hycc2motion)
endif (MOTION_BUILD_HYCC_ADAPTER)
